# percept-edge-api

./: .gitignore  .gitmodules  DEBUG.md  README.md  main.py  pyproject.toml
config/: base.toml
desktop/: README.md  app.py  install_desktop.sh  launch.sh  main.py  test_shutdown.py  test_upload_stop.py
desktop/adapters/: __init__.py  _common.py  api_adapter.py  base.py  can_adapter.py  cr1_ros_adapter.py  robot_os_adapter.py  ros_adapter.py  ros_command_adapter.py  vr_ros_adapter.py
desktop/flows/: base.py  cr1_flow.py  cr_flow.py  sequential.py  w1_flow.py
desktop/models/: log_entry.py  runtime_health.py  runtime_snapshot.py  runtime_state.py  stage_state.py
desktop/profiles/: __init__.py  base.py  cr1.py  cr4a.py  cr4c.py  cr5.py  registry.py  w1.py
desktop/services/: config_loader.py  health_checker.py  lift_executors.py  local_api_client.py  process_bridge.py  process_manager.py  runtime_facade.py  runtime_state.py  status_poll_service.py
desktop/theme/: __init__.py  styles.qss
desktop/widgets/: control_panel.py  cr4a_lift_panel.py  lift_control_widget.py  log_panel.py  main_window.py  status_chip.py  status_panel.py
libs/contracts/: README.md
scripts/: start.sh
scripts/admin/: cleanup_uploaded_collections.py  inspect_raw_spool.py  (+3 more)
src/: config.py  dependencies.py  main.py
static/: collection.html  index.html  monitor.html  processes.html  raw_info.html  redesign-cleanup.html  redesign-collection.html  redesign-monitor.html  redesign-processes.html  redesign-raw-info.html  redesign-unlock.html  redesign-upload-reconcile.html  unlock.html
(+119 files in other folders)
