[project]
name = "percept-edge-api"
version = "0.1.0"
description = "边缘数据采集平台 API 服务"
requires-python = ">=3.10"
dependencies = [
    "aiortc>=1.14.0",
    "aiosqlite>=0.22.1",
    "fastapi>=0.128.0",
    "greenlet>=3.3.1",
    "httpx>=0.28.1",
    "ijson>=3.5.0",
    "loguru>=0.7.3",
    "msgpack>=1.1.2",
    "opencv-python>=4.13.0.90",
    "orjson>=3.11.6",
    "psutil>=7.2.2",
    "pydantic>=2.12.5",
    "pydantic-settings[toml]>=2.12.0",
    "pyzmq>=27.1.0",
    "sqlalchemy>=2.0.46",
    "tenacity>=9.1.2",
    "uvicorn[standard]>=0.40.0",
]

[project.optional-dependencies]
desktop = [
	"pyside6==6.8.0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.14",
    "ty>=0.0.20",
]
[tool.pyright]
include = [
    "src",
    "desktop",
]
exclude = [
    "**/node_modules",
    "**/__pycache__",
    "**/*.db",
    "**/*.vscode",
    "**/*.log",
]
defineConstant = { DEBUG = true }

reportMissingImports = "error"
reportMissingTypeStubs = false
